--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <link rel="manifest" href="assets/favicons/manifest.json">
   <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
+
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
