--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Akroma</title>
@@ -16,7 +17,19 @@
 
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46474321-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-46474321-5');
+  </script>
 </body>
+
 </html>
