feat(explorer): add explorer landing page

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-46474321-5');
   </script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </body>
 
 </html>
